<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerProfile"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btnlogout"
        android:layout_width="113dp"
        android:layout_height="21dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_next"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassLogin"
        app:layout_constraintVertical_bias="0.979" />

    <Button
        android:id="@+id/btndltAcc"
        android:layout_width="113dp"
        android:layout_height="21dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_next"
        android:text="@string/delete_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.979" />

    <Button
        android:id="@+id/btneditAcc"
        android:layout_width="113dp"
        android:layout_height="21dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_next"
        android:text="@string/edit_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.979" />

    <View
        android:id="@+id/view"
        android:layout_width="426dp"
        android:layout_height="190dp"
        android:background="#03115E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="119dp"
        android:layout_height="121dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/profile_picture"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/txtprofileName"
        android:layout_width="310dp"
        android:layout_height="28dp"
        android:layout_marginTop="56dp"
        android:text="Name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/txtProfMobile"
        android:layout_width="353dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="Mobile Number"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtPorfEmail"
        android:layout_width="353dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="Email address"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProfMobile" />

    <TextView
        android:id="@+id/txtProfPreviousOrders"
        android:layout_width="353dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="previous Orders"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPorfEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>